# raytracing

./: CMakeLists.txt
cmake/: FindSDL2PP.cmake
src/: camera.cpp  camera.hpp  color.cpp  color.hpp  hit_record.hpp  hit_record_t.hpp  main.cpp  material.cpp  material.hpp  plane.cpp  plane.hpp  ray.hpp  ray_t.hpp  render.cpp  render.hpp  rng.cpp  rng.hpp  sphere.cpp  sphere.hpp  vec3.hpp  vec3_t.hpp  window.cpp  window.hpp  world.cpp  world.hpp
